--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "discord.js": "^11.4.2",
-    "dotenv": "^6.1.0"
+    "dotenv": "^6.1.0",
+    "request": "^2.88.0"
   }
 }
